--- a/public/assets/style3.css
+++ b/public/assets/style3.css
@@ -1,14 +1,18 @@
 html,
 body {
-  background-color: black;
+  background-color: white;
   color: white;
-  font-family: "Bebas Neue", cursive;
+  /* font-family: "Bebas Neue", cursive; */
+  font-family: "Montserrat", sans-serif;
   box-sizing: border-box;
   margin: 0;
 }
+.mont {
+  font-family: "Montserrat", sans-serif;
+}
 a {
   text-decoration: none;
-  color: green;
+  color: black;
 }
 input {
   -webkit-appearance: none;
@@ -19,7 +23,8 @@ input {
   background-color: black;
   color: white;
   border: none;
-  font-family: "Bebas Neue", cursive;
+  /* font-family: "Bebas Neue", cursive; */
+  font-family: "Montserrat", sans-serif;
 }
 #createAccount {
   display: flex;
@@ -31,7 +36,8 @@ input {
   background-color: black;
   color: white;
   border: none;
-  font-family: "Bebas Neue", cursive;
+  /* font-family: "Bebas Neue", cursive; */
+  font-family: "Montserrat", sans-serif;
 }
 #login {
   display: flex;
@@ -43,7 +49,8 @@ input {
   background-color: black;
   color: white;
   border: none;
-  font-family: "Bebas Neue", cursive;
+  /* font-family: "Bebas Neue", cursive; */
+  font-family: "Montserrat", sans-serif;
 }
 
 @media only screen and (max-width: 600px) {
@@ -83,7 +90,7 @@ input {
   }
   .bg1 {
     /* The image used */
-    background-image: url("../photos/stairs.jpeg");
+    background-image: url("../photos/iceburgs.jpeg");
     /* Full height */
     height: 100vh;
 
@@ -146,7 +153,7 @@ input {
   }
   .bg1 {
     /* The image used */
-    background-image: url("../photos/stairs.jpeg");
+    background-image: url("../photos/iceburgs.jpeg");
     /* Full height */
     height: 100vh;
 
