--- a/views/createAccount.ejs
+++ b/views/createAccount.ejs
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
       rel="stylesheet"
     />
