--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,6 +19,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Traceton J Timmerman</title>
+    <!-- POSSIBLY ADD A PORTFOLIO REVIEW FORM -->
   </head>
   <body>
     <!-- START NAVBAR -->
