added my react-ecommerce project/photos and links

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -47,13 +47,37 @@
     <!-- START MAIN OF 1ST PAGE -->
     <div class="main smText">
       <h2>Here's my work</h2>
+
+      <h3>
+        <a href="https://traceton-react-ecommerce.herokuapp.com/"
+          >React.js Basic Ecommerce Platform</a
+        >
+      </h3>
+      <a href="https://traceton-react-ecommerce.herokuapp.com/"
+        ><img
+          id="reactEcommerce"
+          src="../public/photos/reactEcommerce.jpg"
+          alt=""
+      /></a>
+      <a href="https://traceton-react-ecommerce.herokuapp.com/"
+        ><img
+          id="reactEcommerce"
+          src="../public/photos/reactEcommerce2.jpg"
+          alt=""
+      /></a>
+      <a href="https://traceton-react-ecommerce.herokuapp.com/"
+        ><img
+          id="reactEcommerce"
+          src="../public/photos/reactEcommerce3.jpg"
+          alt=""
+      /></a>
+
       <h3>
         <a href="/about">Node js resume with authentication</a>
       </h3>
       <a href="/about"
         ><img id="toDoImg" src="../public/photos/resumeEs6.png" alt=""
       /></a>
-
       <h3>
         <a href="https://tjcharm.github.io/ToDoList/"
           >List creator with local storage</a
@@ -68,7 +92,7 @@
       <a href="https://tjcharm.github.io/speedBall/"
         ><img id="speedBallImg" src="../public/photos/speedBall.png" alt=""
       /></a>
-      <h3>
+      <!-- <h3>
         <a href="https://tjcharm.github.io/loginChecker/"
           >Javascript User Authentication</a
         >
@@ -78,7 +102,7 @@
           id="loginCheckerImg"
           src="../public/photos/loginChecker.png"
           alt=""
-      /></a>
+      /></a> -->
     </div>
     <div class="contactMe smText">
       <div class="maxWidth">
